--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,16 +35,17 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Pousada
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.1.0.jar=../../../../../../Program Files/Java/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar
+file.reference.mysql-connector-j-8.1.0.jar=C:\\Program Files\\Java\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.1.0.jar}
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=
+javac.modulepath=\
+    ${file.reference.mysql-connector-j-8.1.0.jar}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
